@@ -1,5 +1,10 @@
 2010-01-03  Daniel Macks  <dmacks@netspace.org>
 
+	* dpkg-base-files.info.in, postinst.in: activate the real .la
+	cleaning code
+
+2010-01-03  Daniel Macks  <dmacks@netspace.org>
+
 	* inject.pl, install.sh, setup.sh: update copyright
 
 2009-12-28  Daniel Macks  <dmacks@netspace.org>
